// Copyright 2023 Alexey Lavrenchenko. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 	http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package personalwebsite.actions;

import "data/app/app_info.proto";

option go_package = "personal-website-v2/go-data/actions;actions";

// Proto file describing the Action.

// The action.
message Action {
    // The unique ID to identify the action.
    string id = 1;

    // The app info.
    personalwebsite.app.AppInfo app = 2;
    
    // The app session ID.
    uint64 app_session_id = 3;

    // The transaction ID.
    string tran_id = 4;

    // The action type.
    uint64 type = 5;

    // The action category.
    ActionCategoryEnum.ActionCategory category = 6;

    // The action group.
    uint64 group = 7;

    // Optional. The parent action ID.
    optional string parent_action_id = 8;

    bool is_background = 9;

    // The date and time (in microseconds) at which the action was created.
    int64 created_at = 10;

    // The status of the action can be New(1), InProgress(2), Success(3), or Failure(4).
    ActionStatusEnum.ActionStatus status = 11;

    // The date and time (in microseconds) at which the action was started.
    int64 start_time = 12;

    // Optional. The date and time (in microseconds) at which the action was ended.
    optional int64 end_time = 13;

    // Optional. The elapsed time, in microseconds.
    optional int64 elapsed_time_us = 14;
}

// Container for enum describing the action category.
message ActionCategoryEnum {
    // The action category.
    enum ActionCategory {
        // Unspecified. Do not use.
        UNSPECIFIED = 0;

        // Common actions.
        COMMON = 1;
        HTTP = 2;
        GRPC = 3;
    }
}

// Container for enum describing the action status.
message ActionStatusEnum {
    // The action status.
    enum ActionStatus {
        // Unspecified. Do not use.
        UNSPECIFIED = 0;
        NEW = 1;
        IN_PROGRESS = 2;
        SUCCESS = 3;
        FAILURE = 4;
    }
}
